tests/NormalTests/paczka1/fuzzy1/80868160.err
Error in line 20: M65aqW4VH S673 69,7
Error in line 19: kUgeTfMg A259 1,6
Error in line 27: jwvdI0IOVBX A899 57,1
Error in line 31: Vg0Kpnt7e A259 26,3
Error in line 30: jwvdI0IOVBX S673 0,9
Error in line 36: LGx9NV A259 78,5
